# stm32hal_cmake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  connect_serial.py  repo_ops.py  requirements.txt  setup_dev_env.sh  setup_env.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: c-cpp.yml  compile.yml  main.yml  prepare.yml  prepare_env.yml  release_hal.yml  test.yml
Examples/: CMakeLists.txt
Examples/Board_Init/: CMakeLists.txt
Examples/Board_Init/Src/: eth.c  main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c
Examples/UART_HyperTerminal_IT_767ZI/: CMakeLists.txt
Examples/board_init/: CMakeLists.txt  main.c  main.h  stm32f7xx_hal_msp.c
Examples/board_init/board/: systick_config.c  systick_config.h
Examples/simple_main/: CMakeLists.txt  README.md  STM32F767ZITX_RAM.ld  main.c  stm32f7xx_it.c
hal_config/: CMakeLists.txt
hal_config/include/: stm32f7xx_hal_conf.h
repo_config/: download.sh  download_release.sh  requirements.txt  setup_env.sh
repo_config/ansible/: download_release.yml  install_releases.yml  run_tests.yml  setup_container.yml
repo_config/ansible/playbooks/: start_container.yml
repo_config/download_configs/: repo_helper.json  tcl_utils.json
repo_config/playbooks/: setup.yml
svd/: stm32f767.xml
tests/: .gdbinit  conftest.py  requirements.txt  setup_test_env.sh  test_compile.py  test_compile_examples.py  test_connection.py  test_hal_build.py
tests/lib/: serial_monitor.py
